Fix: Move -data @noDefault before -runMode for proper workspace setup

--- a/.github/workflows/katalon-tests.yml
+++ b/.github/workflows/katalon-tests.yml
@@ -122,13 +122,14 @@ jobs:
         # QUAN TRỌNG: Khi dùng array với @ trong PowerShell, không cần quote trong array
         # PowerShell sẽ tự động escape spaces khi expand array
         # Browser type "Chrome (headless)" - không quote trong array, PowerShell sẽ tự xử lý
-        # Thêm -data @noDefault để đảm bảo không dùng workspace mặc định (tránh GUI mode)
+        # Dùng -data @noDefault để đảm bảo không dùng workspace mặc định (tránh GUI mode)
+        # Lưu ý: -data phải đứng trước -runMode để đảm bảo workspace được set đúng
         $katalonArgs = @(
+          '-data', '@noDefault'
           '-runMode=console'
           '-console'
           '-noSplash'
           '-consoleLog'
-          '-data', '@noDefault'
           "-projectPath=$projectPath"
           "-testSuitePath=$testSuitePathFormatted"
           '-executionProfile=default'
