--- a/.github/workflows/katalon-tests.yml
+++ b/.github/workflows/katalon-tests.yml
@@ -291,6 +291,16 @@ jobs:
                     $outputCount = ($outputBuilder.ToString() -split "`n").Count
                     $errorCount = ($errorBuilder.ToString() -split "`n").Count
                     Write-Host "[$(Get-Date -Format 'HH:mm:ss')] Status: Still running... (Elapsed: ${minutes}m ${seconds}s, PID: $($process.Id), Output lines: $outputCount, Error lines: $errorCount)" -ForegroundColor Gray
+                    
+                    # QUAN TRỌNG: Hiển thị errors ngay nếu có
+                    if ($errorCount -gt 0) {
+                        Write-Host "[$(Get-Date -Format 'HH:mm:ss')] WARNING: Found $errorCount error line(s)! Displaying errors:" -ForegroundColor Yellow
+                        $currentErrors = ($errorBuilder.ToString() -split "`n") | Where-Object { $null -ne $_ -and $_.Trim() -ne '' }
+                        $currentErrors | ForEach-Object {
+                            Write-Host "[$(Get-Date -Format 'HH:mm:ss')] ERROR: $_" -ForegroundColor Red
+                        }
+                    }
+                    
                     $lastStatusTime = Get-Date
                     
                     # Kiểm tra child processes
